# moe-parsers

./: .gitignore  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: format.yml  publish.yml  run_test.yml  run_tests.yml  tests.yml
docs/: index.md
moe_parsers/: __init__.py  adapter.py  classes.py  items.py  parser.py  web.py
moe_parsers/core/: adapter.py  items.py  parser.py
moe_parsers/providers/: __init__.py  aniboom.py  animego.py  best.py  kodik.py  shikimori.py
moe_parsers/tests/: test_adapter.py  test_shikimori.py
oldmoe_parsers/: classes.py
oldmoe_parsers/providers/: aniboom.py  animego.py
tests/: test_adapter.py  test_shikimori.py
tests/unit/: test_aniboom.py  test_area.py  test_kodik.py
