[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-parsers"
version = "2025.2.1"
authors = [
    { name = "nichind", email = "nichinddev@gmail.com" }
]
description = "Parsing anime and getting video made easy"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "python-dotenv",
    "beautifulsoup4"
]
keywords = ["shikimori", "manga", "aniboom", "kodik", "animego", "moe", "parser", "anime", "async"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/nichind/moe-parsers"


[tool.ruff]
line-length = 120